MCR-1456 ALTO-selectable fixed pixel error - fixed z-index bug

--- a/mycore-viewer/src/main/less/templates/default/Iview.less
+++ b/mycore-viewer/src/main/less/templates/default/Iview.less
@@ -7,7 +7,7 @@
   }
 
   .navbar {
-    z-index: 5;
+    z-index: 15;
 
     div img {
       margin-top: 11px;
